--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
 cmake_minimum_required(VERSION 3.16.3)
-
-include_directories("dependencies/SDL2/include")
-
-file(GLOB SDL2LIBS "dependencies/SDL2/*.dll.a")
-
-file(GLOB SOURCES "src/*.cpp")
-
+set(CMAKE_CXX_COMPILER g++)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+
 project(cppgame)
 
-link_directories("${PROJECT_SOURCE_DIR}/dependencies/SDL2/lib" )
+link_directories("dependencies/SDL2/lib")
+link_directories("dependencies/SDL2/bin")
+
+file(GLOB SOURCES "src/*.cpp")
+include_directories("dependencies/SDL2/include")
 
 add_executable(main ${SOURCES})
 
+target_link_libraries(main mingw32 SDL2main SDL2 SDL2_image)
